# commitlint-rs

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  README.md  cspell.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_release.yaml  bump.yaml  ci.yaml  lint.yaml  release.yaml
cli/: .dockerignore  .editorconfig  Cargo.toml  Dockerfile
cli/e2e/: cli.bats
cli/json-schema/: config.json
cli/src/: args.rs  config.rs  git.rs  lib.rs  message.rs  rule.rs
cli/src/rule/: body_empty.rs  body_max_length.rs  description_empty.rs  description_format.rs  description_max_length.rs  footers_empty.rs  scope.rs  scope_empty.rs  scope_format.rs  scope_max_length.rs  subject_empty.rs  type.rs  type_empty.rs  type_format.rs  type_max_length.rs
cli/src/snapshots/: commitlint__config__tests__generate_json_schema.snap
e2e/: default.bats
examples/: .commitlint.yaml
schema/: Cargo.toml
schema/src/: main.rs
schema/src/snapshots/: schema__tests__snap_json_schema.snap
src/: args.rs  config.rs  git.rs  main.rs  message.rs  result.rs  rule.rs
src/rule/: body_empty.rs  body_max_length.rs  description_empty.rs  description_format.rs  description_max_length.rs  footers_empty.rs  scope.rs  scope_empty.rs  scope_format.rs  scope_max_length.rs  subject_empty.rs  type.rs  type_empty.rs  type_format.rs  type_max_length.rs
web/: astro.config.mjs  package-lock.json  package.json
web/src/content/docs/: index.mdx  license.md
web/src/content/docs/config/: IDE.md  configuration.md  default.md
web/src/content/docs/rules/: body-empty.md  body-max-length.md  description-empty.md  description-format.md  description-max-length.md  footers-empty.md  scope-empty.md  scope-format.md  scope-max-length.md  scope.md  subject-empty.md  type-empty.md  type-format.md  type-max-length.md  type.md
web/src/content/docs/setup/: debug.md  install.md  motivation.md
