[package]
name = "commitlint-rs"
description = "CLI tool to lint commits by Conventional Commits"
documentation = "https://keisukeyamashita.github.io/commitlint-rs"
authors = ["KeisukeYamashita <19yamashita15@gmail.com>"]
keywords = ["conventional-commits", "lint"]
categories = ["command-line-utilities"]
version = "0.1.12"
readme = "README.md"
repository = "https://github.com/KeisukeYamashita/commitlint-rs"
license = "MIT OR Apache-2.0"
edition = "2021"
exclude = ["/web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive", "env", "string"] }
futures = "0.3.30"
regex = "1.10.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.121"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }


[[bin]]
name = "commitlint"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/commitlint-v{ version }-{ target }{ archive-suffix }"
