[workspace]
members = ["cli", "schema"]
resolver = "2"

[workspace.package]
version = "0.2.2"
authors = ["KeisukeYamashita <19yamashita15@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://keisukeyamashita.github.io/commitlint-rs"
keywords = ["conventional-commits", "lint"]
categories = ["command-line-utilities"]
readme = "README.md"
repository = "https://github.com/KeisukeYamashita/commitlint-rs"
exclude = ["/web"]
edition = "2021"
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
