[package]
name = "commitlint-rs"
description = "CLI tool to lint commits by Conventional Commits"
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env", "string"] }
futures = "0.3.30"
regex = "1.10.5"
schemars = { version = "1.0.0-alpha.16", optional = true }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.121"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
paste = "1.0.15"

[[bin]]
name = "commitlint"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/commitlint-v{ version }-{ target }{ archive-suffix }"
[features]
schemars = ["dep:schemars"]
default = []

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
