[package]
name = "commitlint-rs"
description = "CLI tool to lint commits by Conventional Commits"
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "commitlint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.46", features = ["derive", "env", "string"] }
futures = "0.3.30"
regex = "1.10.5"
schemars = { version = "0.8.21", optional = true }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1.43.1", features = ["full"] }

[features]
schemars = ["dep:schemars"]
default = []

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/commitlint-v{ version }-{ target }{ archive-suffix }"
