[package]
name = "schema"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true
exclude.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
cli = { path = "../cli", features = ["schemars"], package = "commitlint-rs" }
schemars = { version = "1.0.0-alpha.16" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
