[package]
name = "schema"
version.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
repository.workspace = true
exclude.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
cli = { path = "../cli", features = ["schemars"], package = "commitlint-rs" }
schemars = { version = "0.8.21" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
